2008-09-12  Ian Beckwith  <ianb@erislabs.net>

	* Bump version to 4.9.5.
	* Fix incorrect INSTALL_PROGRAM calls.
	  Thanks to James Rowe.
	* gitaction: add xdg-open, kfmclient, exo-open.

2008-06-16  Ian Beckwith  <ianb@erislabs.net>

	* gitaction:
	  + support .7z files
	  + MacOS: don't run open(1) on archives, it expands them.

2008-06-10  Ian Beckwith  <ianb@erislabs.net>

	* Update to gnulib 20080610 commit 765ede78
	  (fixes strcasestr configure test hang).
	* gitaction:
	  + unzip: use -l instead of -v.
	  + try rar as well as unrar for *.rar|*.cbr.

2008-05-27  Ian Beckwith  <ianb@erislabs.net>

	* Update to gnulib 20080527 commit 9c504099.
	* gitaction: Don't prompt for keypress after running MacOS open(1).

2008-05-18  Ian Beckwith  <ianb@erislabs.net>

	* Add apropos command (^X^A) for key-binding search.
	* Change GIT_ env vars to GNUIT_ (eg GNUIT_PAGER).
	  Fall back to old names for backwards compatibility.
	* Use mkstemp() for temporary files.
	* Update to gnulib 20080512 commit 6ea7ea7.
	* Fix make distcheck: remove absolute-header.m4 from EXTRA_DIST.

2008-05-07  Ian Beckwith  <ianb@erislabs.net>

	* rewrote gitaction, adding more file types and viewers.

2008-04-13  Ian Beckwith  <ianb@erislabs.net>

	* bumped version to 4.9.4
	* Thanks to Tudor Hulubei for reporting the following:
	  + Use base 1024 when autoscaling file sizes.
	  + Fix sorting by filesize.
	  + Fix current file size display at bottom when no files are selected.
	  + Fix input in incremental-search (^S) mode.
	  + Manually append "B" suffix to sizes in panel info/size display.
	  + Clear screen before restoring, in case restore fails.
	  + gitaction: MacOS: try and run open(1) first on non-textfiles.

2008-03-29  Ian Beckwith  <ianb@erislabs.net>

	* configure.ac: add AC_SYS_LARGEFILE to fix
	  64bit IO on 32 bit systems.
	* Remove obsolete files during install
	  (eg $(datadir)/.gitrc.common).
	* Handle config file lines consisting solely of a comment.